# takizawa-karen-generator

./: .gitignore  README.md  eval_karen.py  generate_karen.py  generate_karen_char_wise.py  generate_text.py  inspire_sequential_tying_word_wise_train_generate_karen.py  multilayer_word_wise_train_generate_karen.py  preprocess_text.py  preprocess_text_test.py  pyproject.toml  requirements.txt  tying_multilayer_word_wise_train_generate_karen.py  tying_word_wise_train_generate_karen.py  word_wise_train_generate_karen.py
data/: corpus.pkl  corpus_test.pkl  karen_insta.txt  karen_insta_preprocess.txt  karen_insta_test.txt
old/: train_generate_karen.py
