[tool.poetry]
name = "takizawa-karen-generator"
version = "0.1.0"
description = ""
authors = ["kishimoto <drehbleistift@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.5"
mecab-python3 = "^1.0.3"
mojimoji = "^0.0.11"
tensorflow = "^2.4.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
